--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ button {
     outline: none;
 }
 
+[v-cloak] {
+    display: none;
+}
+
 .container {
     max-width: 1142px;
     margin: auto;
@@ -151,6 +155,10 @@ button {
     height: 280px;
 }
 
+.item-info {
+    padding: 10px;
+}
+
 .wrapper-for-interaction {
     display: flex;
     justify-content: space-between;
@@ -206,12 +214,22 @@ button {
 
 .book-add {
     font-size: 20px;
-    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 38px;
     width: 50px;
     background-color: #f16d7f;
-    color: #ffffff;
-    border-radius: 5%;
+    /* color: rgb(240, 226, 35); */
+    border-radius: 8px;
+}
+
+i {
+    font-size: 30px;
+}
+
+.favorite {
+    color: rgb(240, 226, 35);
 }
 
 .footer {
